--- a/src/styles/css.css
+++ b/src/styles/css.css
@@ -92,3 +92,22 @@ body {
   background-color: white;
   color: black;
 }
+
+#header-include {
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding-left: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+
+}
+
+#hp {
+  padding-right: 20px;
+}
+
+#restart {
+  float: right;
+  padding-right: 10px;
+}
