--- a/src/styles/css.css
+++ b/src/styles/css.css
@@ -107,6 +107,14 @@ body {
   padding-right: 20px;
 }
 
+#eaten {
+  padding-right: 20px;
+}
+
+#location {
+  padding-right: 20px;
+}
+
 #restart {
   float: right;
   padding-right: 10px;
